<resources>
    <string name="app_name">Popular Movies and Tv Series</string>
    <string name="movie">Movie</string>
    <string name="tvShow">Tv Series</string>
    <string name="title">Title</string>
    <string name="studio">Studio</string>
    <string name="description">Description</string>
    <string name="title_activity_detail">Detail</string>
    <string name="synopsis">Synopsis</string>
    <string name="genre">Genre</string>
    <string name="logo">Logo</string>
    <string name="vote">Vote Average: </string>
    <string name="release">Release Date: </string>

</resources>